--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,6 @@
 
 .primary-para{
     color: var(--dark-03, #727272);
-    text-align: center;
     font-size: 1rem;
     font-weight: 400;
     line-height: 26px;
@@ -30,7 +29,8 @@
     font-size: 1.25rem;
     font-weight: 600;
     border: 0px;
-    margin-top:32px
+    margin-top:32px;
+    cursor: pointer;
 }
 
 /* header style */
@@ -47,7 +47,7 @@ nav{
 nav ul{
     display: flex;
     gap: 30px;
-    padding-top: 10px;
+    padding:10px 0px;
 }
 li{
     list-style-type: none;
@@ -62,13 +62,13 @@ a{
     line-height: 26px;
 }
 
-/* title styles */
+/* banner styles */
 
 .banner{
     margin-top: 116px;
 }
 .banner-content{
-    width: 862px;
+    width: 800px;
     text-align: center;
     margin: 0px auto;
 }
@@ -78,4 +78,38 @@ a{
     font-size: 3.8rem;
     font-weight: 700;
     margin-bottom: 15px;
+}
+.banner img{
+    margin-top: 50px;
+    width: 100%;
+}
+
+
+/* responsive */
+
+@media screen and (max-width:576px) {
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+    }
+    .banner-content{
+        width: auto;
+    }
+    nav ul{
+        margin-top: 50px;
+    }
+}
+
+@media screen and (min-width:576px) and (max-width:992px){
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+    }
+    .banner-content{
+        width: auto;
+    }
 }
