--- a/styles.css
+++ b/styles.css
@@ -116,6 +116,43 @@ main{
     color: #FF900E;
 }
 
+/* facts section */
+
+.fact-text{
+    margin-top: 130px;
+    gap: 20px;
+}
+.fact-text h3{
+    margin-bottom: 20px;
+}
+.facts-card-container{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 100px;
+}
+.fact .card{
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 30px;
+
+}
+.card-stat{
+    font-size: 2.8rem;
+    color: (#424242);
+    font-weight: 600;
+}
+.card-title{
+    font-size: 1.25rem;
+}
+
+
+
+
+
+
+
+
 /* responsive */
 
 @media screen and (max-width:576px) {
@@ -134,6 +171,10 @@ main{
     }
     .team-image-container{
         grid-template-columns: 1fr;
+    }
+    .facts-card-container{
+        flex-direction: column;
+        gap: 10px;
     }
     
 }
